--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,23 @@
 body 
 {
-    font-family: Arial, Helvetica, sans-serif;
+    color: #333;
     text-align: center;
-    color: greenyellow;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+.container 
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+.post 
+{
+    font-size: 20px;
 }
