--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,7 +11,7 @@ body
 .container 
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -21,3 +21,20 @@ body
 {
     font-size: 20px;
 }
+
+#cabecera 
+{
+    background-color: #33A;
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+    box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.5);
+}
+#cabecera #tagline
+{
+    font-weight: normal;
+    font-size: 0.8;
+    padding: 1em 0 0 0;
+}
+
