--- a/css/estilos.css
+++ b/css/estilos.css
@@ -38,3 +38,9 @@ body
     padding: 1em 0 0 0;
 }
 
+.content
+{
+    font-family: Arial, Helvetica, sans-serif;
+    color: #333;
+    text-align: justify;
+}
