--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body 
 {
+    background-color: #1e1f24;
     color: #333;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -19,7 +20,8 @@ body
 
 #post
 {
-    font-size: 20px;
+    background: white;
+    padding: 1em;
 }
 
 #cabecera 
@@ -31,6 +33,13 @@ body
     padding: 0.5em;
     box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.5);
 }
+
+#cabecera #logo 
+{
+    width: 20px;
+    vertical-align: middle;
+}
+
 #cabecera #tagline
 {
     font-weight: normal;
