Agregando una nueva imagen y un gitignore

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -61,3 +61,10 @@ body
     text-align: center;
     padding: 0.5em;
 }
+
+#imagen p
+{
+    text-align: center;
+    font-weight: bold;
+    color: #33A;
+}
